# bread-crumbs

./: CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  lextest
docs/: architecture.md  breadcrumbs.md
docs/compiler/: ast.md  context.md  core.md  diagnostic.md  lexer.md  parser.md  semantic.md
docs/runtime/: ffi.md  gc.md  lib.md  memory.md  profiler.md
example/1.essentials/: 1.program.brc  2.variables.brc  3.conditions.brc  4.loops.brc  5.functions.brc  6.compound.brc  7.imports.brc  README.md
example/2.advanced/: README.md  defers.brc  events.brc  exceptions.brc  generics.brc  pointers.brc  reflection.brc  tests.brc  threads.brc  traits.brc
example/3.stdlib/: README.md  collections.brc  console.brc  encode.brc  errors.brc  fmt.brc  fs.brc  io.brc  net.brc  sys.brc  time.brc
examples/: 5.imports.brc  7.structs.brc  8.collections.brc  9.traits.brc  conditions.brc  functions.brc  hello_world.brc  loops.brc  structs.brc  variables.brc
include/: ast.h  debug.h  errors.h  lexer.h  parser.h  tokenizer.h  utils.h  vm.h
include/cli/: args.h  colors.h  commands.h  core.h  style.h
include/common/: benchmark.h  debug.h  file_reader.h  utils.h
include/compiler/: context.h  errors.h  lexer.h  parser.h
include/compiler/backend/: codegen.h  vm.h
include/compiler/backend/jit/: compiler.h  core.h  runtime.h
include/compiler/backend/native/: asm.h  compiler.h  core.h  object.h
include/compiler/backend/vm/: bytecode.h  compiler.h  core.h  memory.h  runtime.h
include/compiler/core/: arena_alloc.h  compiler_context.h  diagnostic.h  hash_table.h  string_pool.h
include/compiler/diagnostic/: errors.h
include/compiler/frontend/: ast.h  lexer.h  parser.h  semantic.h  symbol.h  tokenizer.h  types.h
include/compiler/frontend/ast/: visitor.h
include/compiler/frontend/lexer/: tokens.h
include/compiler/frontend/parser/: decl.h  expr.h  stmt.h
include/compiler/frontend/semantic/: symbol.h  types.h
include/compiler/lexer/: tokenizer.h
include/compiler/middle/: builder.h  ir.h  optimizer.h  semantic.h  symbol.h  types.h
include/compiler/parser/: ast.h
include/compiler/runtime/: ffi.h  gc.h  memory.h  profiler.h  vm.h
include/compiler/semantic/: symbol.h  types.h
include/core/: diagnostic.h  hashmap.h  strings.h
include/core/common/: benchmark.h  debug.h  filesystem.h  resolver.h  source.h
include/core/ds/: arena.h  hashmap.h  strings.h
include/core/lang/: debug.h  diagnostic.h  filesystem.h  resolver.h  source.h
include/core/platform/: unix.h  windows.h
include/runtime/: ffi.h  gc.h  memory.h  object.h  profiler.h
include/runtime/lib/: io.h  ptr.h  type.h
include/utils/: debug.h  file_reader.h  utils.h
lib/std/: encode.brc
references/1.essentials/: 1.program.brc  2.conditions.brc  2.variables.brc  3.variables.brc  4.loops.brc  5.imports.brc  6.functions.brc  7.compound.brc  7.structs.brc
references/2.advanced/: 1.traits.brc  2.errors.brc  2.rawmem.brc  3.rawmem.brc  4.defers.brc  4.scope.brc  5.atomic.brc  5.generics.brc  6.diverge.brc
references/3.stdlib/: collections.brc  console.brc  encode.brc  errors.brc  fmt.brc  fs.brc  io.brc  mem.brc  net.brc  ptr.brc  sys.brc  time.brc
src/: ast.c  errors.c  lexer.c  main.c  parser.c  tokenizer.c  vm.c
src/cli/: args.c  commands.c  core.c
src/cli/commands/: build.c  commands.c
src/compiler/: context.c  errors.c  lexer.c  parser.c  semantic.c  vm.c
src/compiler/backend/: codegen.c  vm.c
src/compiler/backend/aot/: object.c
src/compiler/backend/jit/: compiler.c  core.c  runtime.c
src/compiler/backend/native/: asm.c  compiler.c  core.c  object.c
src/compiler/backend/vm/: bytecode.c  core.c  memory.c  runtime.c
src/compiler/core/: arena_alloc.c  compiler_context.c  diagnostic.c  hash_table.c  string_pool.c
src/compiler/diagnostic/: errors.c
src/compiler/frontend/: ast.c  lexer.c  parser.c  semantic.c  symbol.c  tokenizer.c  types.c
src/compiler/frontend/ast/: visitor.c
src/compiler/lexer/: tokenizer.c
src/compiler/middle/: builder.c  ir.c  optimizer.c  semantic.c  symbol.c  types.c
src/compiler/parser/: ast.c
src/compiler/runtime/: ffi.c  gc.c  memory.c  profiler.c  vm.c
src/compiler/semantic/: symbol.c  types.c
src/core/: arena.c  diagnostic.c  hashmap.c  strings.c
src/core/common/: benchmark.c  filesystem.c  source.c
src/core/ds/: arena.c  hashmap.c  strings.c
src/core/lang/: diagnostic.c  filesystem.c  resolver.c  source.c
src/core/platform/: unix.c  windows.c
src/runtime/: ffi.c  gc.c  memory.c  profiler.c
src/runtime/lib/: io.c  os.c  ptr.c  str.c  type.c
test/: testlexer.c
test/cases/: analisis.brc  parser.brc  tokens.brc
test/compiler/: analisis.c  codegen.c  lexing.c  parsing.c
test/examples/: parser.brc  tokens.brc
test/integration/: analisis.c  codegen.c  lexing.c  parsing.c
test/other/: arena.c  diagnostic.c  hashtable.c  stringpool.c
test/output/: analisis  arena  diagnostic  hashtable  lexing  parsing  stringpool
test/unit/: analisis.c  arena.c  codegen.c  diagnostic.c  hashmap.c  lexing.c  parsing.c  strings.c
test/utils/: benchmark.h
tests/: analisis.c  lexing.c  parsing.c  test_errors.c  test_lexer.c  test_parser.c  test_semantic.c
tests/cases/: shit.brc
tests/other/: arena.c  diagnostic.c  hashtable.c  stringpool.c  test_arena.c  test_diagnostic.c  test_hashtable.c  test_stringpool.c
(+9 files in other folders)
